--- a/app/partials/intro.html
+++ b/app/partials/intro.html
@@ -62,8 +62,8 @@
           console.log("load started");
         },
         onFileProgress: function(event){
-          var options = event.target.options;
-          options.item.children("div").width(options.progress * options.item.width());
+          var div = map[event.target.options.item.src]
+          div.children("div").width(options.progress * options.item.width());
         },
         onOverallProgress: function(event){
           var options = event.target.options;
